--- a/docs/devnotes.org
+++ b/docs/devnotes.org
@@ -68,3 +68,6 @@ https://www.isca-speech.org/archive/interspeech_2016/adi16_interspeech.html
 https://www.isca-speech.org/archive/iswlt_04/slt4_047.html
 https://www.isca-speech.org/archive/odyssey_2020/li20b_odyssey.html
 https://www.isca-speech.org/archive/sltu_2012/nakagawa12_sltu.html
+
+this one is missed but dc.description is valid
+https://transacl.org/ojs/index.php/tacl/article/view/2423
